--- a/index.html
+++ b/index.html
@@ -417,13 +417,13 @@
             <div class="row align-items-center">
                 <div class="col-md-5 my-3">
                     <h6 class="mb-0">Phone</h6>
-                    <p class="mb-4">+ 123-456-7890</p>
+                    <p class="mb-4">+ 302-689- 3440</p>
 
                     <h6 class="mb-0">Address</h6>
                     <p class="mb-4">12345 Fake ST NoWhere AB Country</p>
 
                     <h6 class="mb-0">Email</h6>
-                    <p class="mb-0">info@website.com</p>
+                    <p class="mb-0">contact@utrains.org</p>
                     <p></p>
                 </div>
                 <div class="col-md-7">
