--- a/components.html
+++ b/components.html
@@ -853,7 +853,7 @@
             </tr>
             <tr>
                <td>
-                  <p class="font-weight-bold text-muted">Success Text :</p>
+                  <p class="font-weight-bold text-muted">Successful Text :</p>
                </td>
                <td>
                   <p class="text-success">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, nulla, reprehenderit! Beatae, dolor harum fugiat.</p>
@@ -861,7 +861,7 @@
             </tr>
             <tr>
                <td>
-                  <p class="font-weight-bold text-muted">Info Text :</p>
+                  <p class="font-weight-bold text-muted">info text :</p>
                </td>
                <td>
                   <p class="text-info">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, nulla, reprehenderit! Beatae, dolor harum fugiat.</p>
