--- a/components.html
+++ b/components.html
@@ -845,7 +845,7 @@
             </tr>
             <tr>
                <td>
-                  <p class="font-weight-bold text-muted">Warning Text :</p>
+                  <p class="font-weight-bold text-muted">harmful Text :</p>
                </td>
                <td>
                   <p class="text-warning">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, nulla, reprehenderit! Beatae, dolor harum fugiat.</p>
