--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                 </div>
                 <div class="col-md-7">
                     <form>
-                        <h4 class="mb-4">Drop Us A Line</h4>
+                        <h4 class="mb-4">call us</h4>
                         <div class="form-row">
                             <div class="form-group col-sm-4">
                                 <input type="text" class="form-control text-white rounded-0 bg-transparent" name="name" placeholder="Name">
