--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                             <div class="media align-items-center mb-3">
                                 <img class="mr-3" src="assets/imgs/avatar-1.jpg" alt="">
                                 <div class="media-body">
-                                    <h6 class="mt-1 mb-0">Maria Garcia</h6>
+                                    <h6 class="mt-1 mb-0">chah maurice</h6>
                                     <small class="text-muted mb-0">Insurance Agent</small>      
                                 </div>
                             </div>
