--- a/components.html
+++ b/components.html
@@ -837,7 +837,7 @@
             </tr>
             <tr>
                <td>
-                  <p class="font-weight-bold text-muted">Danger Text :</p>
+                  <p class="font-weight-bold text-muted">Damage Text :</p>
                </td>
                <td>
                   <p class="text-danger">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, nulla, reprehenderit! Beatae, dolor harum fugiat.</p>
